chore: WSC-1487 improve stability and refactor multiple interactions (#62)
chore: update rabbitmq config values
chore: use ZGC option on systemd service configuration
chore: clean up interfaces removing comments
chore: update pre-commit hooks versions
chore: use default directory to read carbonio-message-broker user credentials
chore: update db healthcheck
chore: remove meeting-cleanup script
chore: use service exception where needed
chore: use 424 as error status code for health check on mandatory services
chore: use google inject annotation instead of jakarta ones
chore: enable virtual background capability by default
fix: delete operation on room with avatar